[package]
name = "driver_xhci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
driver_common = { path = "../driver_common" }
driver_pci = { path = "../driver_pci" }
tock-registers = "0.8"
log = "0.4"
spin = "0.9"
raw-cpuid = "11.0"
